--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -8,7 +8,7 @@ skillMetadata:
           label: Setting Friendly Display Name
           value: ""
           placeholder: demo prompt in the input box
-    - name: Login << Name of another section
+    - name: Login << Test changes
       fields:
         - type: label
           label: Just a little bit of extra info for the user to understand following settings
