--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -1,15 +1,13 @@
 
 skillMetadata:
   sections:
-    - name: Login << Test changes
+    - name: Login
       fields:
-        - type: label
-          label: Just a little bit of extra info for the user to understand following settings
         - name: username
-          type: text
-          label: Username
+          type: email
+          label: Enter your Login Email
           value: "yk020@hdm-stuttgart.de"
         - name: password
           type: password
-          label: Password
+          label: Enter your password
           value: "SIPasswortyk020"
